seaqt/QtWebKit/gen_qwebkitplatformplugin.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QMetaObject QMetaObject;
typedef struct QRect QRect;
typedef struct QUrl QUrl;
typedef struct QWebHapticFeedbackPlayer QWebHapticFeedbackPlayer;
typedef struct QWebNotificationData QWebNotificationData;
typedef struct QWebNotificationPresenter QWebNotificationPresenter;
typedef struct QWebSelectData QWebSelectData;
typedef struct QWebSelectMethod QWebSelectMethod;
typedef struct QWebSpellChecker QWebSpellChecker;
typedef struct QWebTouchModifier QWebTouchModifier;
int QWebSelectData_itemType(const QWebSelectData* self, int param1);
struct seaqt_string QWebSelectData_itemText(const QWebSelectData* self, int index);
struct seaqt_string QWebSelectData_itemToolTip(const QWebSelectData* self, int index);
bool QWebSelectData_itemIsEnabled(const QWebSelectData* self, int index);
bool QWebSelectData_itemIsSelected(const QWebSelectData* self, int index);
int QWebSelectData_itemCount(const QWebSelectData* self);
bool QWebSelectData_multiple(const QWebSelectData* self);
QColor* QWebSelectData_backgroundColor(const QWebSelectData* self);
QColor* QWebSelectData_foregroundColor(const QWebSelectData* self);
QColor* QWebSelectData_itemBackgroundColor(const QWebSelectData* self, int index);
QColor* QWebSelectData_itemForegroundColor(const QWebSelectData* self, int index);
void QWebSelectData_operatorAssign(QWebSelectData* self, QWebSelectData* param1);
void QWebSelectData_delete(QWebSelectData* self);
QMetaObject* QWebSelectMethod_metaObject(const QWebSelectMethod* self);
void* QWebSelectMethod_metacast(QWebSelectMethod* self, const char* param1);
int QWebSelectMethod_metacall(QWebSelectMethod* self, int param1, int param2, void** param3);
struct seaqt_string QWebSelectMethod_tr(const char* s);
struct seaqt_string QWebSelectMethod_trUtf8(const char* s);
void QWebSelectMethod_show(QWebSelectMethod* self, QWebSelectData* param1);
void QWebSelectMethod_hide(QWebSelectMethod* self);
void QWebSelectMethod_setGeometry(QWebSelectMethod* self, QRect* geometry);
void QWebSelectMethod_setFont(QWebSelectMethod* self, QFont* font);
void QWebSelectMethod_selectItem(QWebSelectMethod* self, int index, bool allowMultiplySelections, bool shift);
void QWebSelectMethod_connect_selectItem(QWebSelectMethod* self, intptr_t slot, void (*callback)(intptr_t, int, bool, bool), void (*release)(intptr_t));
void QWebSelectMethod_didHide(QWebSelectMethod* self);
void QWebSelectMethod_connect_didHide(QWebSelectMethod* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
struct seaqt_string QWebSelectMethod_tr2(const char* s, const char* c);
struct seaqt_string QWebSelectMethod_tr3(const char* s, const char* c, int n);
struct seaqt_string QWebSelectMethod_trUtf82(const char* s, const char* c);
struct seaqt_string QWebSelectMethod_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QWebSelectMethod_staticMetaObject();
void QWebSelectMethod_delete(QWebSelectMethod* self);
struct seaqt_string QWebNotificationData_title(const QWebNotificationData* self);
struct seaqt_string QWebNotificationData_message(const QWebNotificationData* self);
QUrl* QWebNotificationData_iconUrl(const QWebNotificationData* self);
QUrl* QWebNotificationData_openerPageUrl(const QWebNotificationData* self);
void QWebNotificationData_operatorAssign(QWebNotificationData* self, QWebNotificationData* param1);
void QWebNotificationData_delete(QWebNotificationData* self);
QMetaObject* QWebNotificationPresenter_metaObject(const QWebNotificationPresenter* self);
void* QWebNotificationPresenter_metacast(QWebNotificationPresenter* self, const char* param1);
int QWebNotificationPresenter_metacall(QWebNotificationPresenter* self, int param1, int param2, void** param3);
struct seaqt_string QWebNotificationPresenter_tr(const char* s);
struct seaqt_string QWebNotificationPresenter_trUtf8(const char* s);
void QWebNotificationPresenter_showNotification(QWebNotificationPresenter* self, QWebNotificationData* param1);
void QWebNotificationPresenter_notificationClosed(QWebNotificationPresenter* self);
void QWebNotificationPresenter_connect_notificationClosed(QWebNotificationPresenter* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWebNotificationPresenter_notificationClicked(QWebNotificationPresenter* self);
void QWebNotificationPresenter_connect_notificationClicked(QWebNotificationPresenter* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
struct seaqt_string QWebNotificationPresenter_tr2(const char* s, const char* c);
struct seaqt_string QWebNotificationPresenter_tr3(const char* s, const char* c, int n);
struct seaqt_string QWebNotificationPresenter_trUtf82(const char* s, const char* c);
struct seaqt_string QWebNotificationPresenter_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QWebNotificationPresenter_staticMetaObject();
void QWebNotificationPresenter_delete(QWebNotificationPresenter* self);
QMetaObject* QWebHapticFeedbackPlayer_metaObject(const QWebHapticFeedbackPlayer* self);
void* QWebHapticFeedbackPlayer_metacast(QWebHapticFeedbackPlayer* self, const char* param1);
int QWebHapticFeedbackPlayer_metacall(QWebHapticFeedbackPlayer* self, int param1, int param2, void** param3);
struct seaqt_string QWebHapticFeedbackPlayer_tr(const char* s);
struct seaqt_string QWebHapticFeedbackPlayer_trUtf8(const char* s);
void QWebHapticFeedbackPlayer_playHapticFeedback(QWebHapticFeedbackPlayer* self, int param1, struct seaqt_string hapticType, int param3);
struct seaqt_string QWebHapticFeedbackPlayer_tr2(const char* s, const char* c);
struct seaqt_string QWebHapticFeedbackPlayer_tr3(const char* s, const char* c, int n);
struct seaqt_string QWebHapticFeedbackPlayer_trUtf82(const char* s, const char* c);
struct seaqt_string QWebHapticFeedbackPlayer_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QWebHapticFeedbackPlayer_staticMetaObject();
void QWebHapticFeedbackPlayer_delete(QWebHapticFeedbackPlayer* self);
QMetaObject* QWebTouchModifier_metaObject(const QWebTouchModifier* self);
void* QWebTouchModifier_metacast(QWebTouchModifier* self, const char* param1);
int QWebTouchModifier_metacall(QWebTouchModifier* self, int param1, int param2, void** param3);
struct seaqt_string QWebTouchModifier_tr(const char* s);
struct seaqt_string QWebTouchModifier_trUtf8(const char* s);
unsigned int QWebTouchModifier_hitTestPaddingForTouch(const QWebTouchModifier* self, int param1);
struct seaqt_string QWebTouchModifier_tr2(const char* s, const char* c);
struct seaqt_string QWebTouchModifier_tr3(const char* s, const char* c, int n);
struct seaqt_string QWebTouchModifier_trUtf82(const char* s, const char* c);
struct seaqt_string QWebTouchModifier_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QWebTouchModifier_staticMetaObject();
void QWebTouchModifier_delete(QWebTouchModifier* self);
QMetaObject* QWebSpellChecker_metaObject(const QWebSpellChecker* self);
void* QWebSpellChecker_metacast(QWebSpellChecker* self, const char* param1);
int QWebSpellChecker_metacall(QWebSpellChecker* self, int param1, int param2, void** param3);
struct seaqt_string QWebSpellChecker_tr(const char* s);
struct seaqt_string QWebSpellChecker_trUtf8(const char* s);
bool QWebSpellChecker_isContinousSpellCheckingEnabled(const QWebSpellChecker* self);
void QWebSpellChecker_toggleContinousSpellChecking(QWebSpellChecker* self);
void QWebSpellChecker_learnWord(QWebSpellChecker* self, struct seaqt_string word);
void QWebSpellChecker_ignoreWordInSpellDocument(QWebSpellChecker* self, struct seaqt_string word);
void QWebSpellChecker_checkSpellingOfString(QWebSpellChecker* self, struct seaqt_string word, int* misspellingLocation, int* misspellingLength);
struct seaqt_string QWebSpellChecker_autoCorrectSuggestionForMisspelledWord(QWebSpellChecker* self, struct seaqt_string word);
void QWebSpellChecker_guessesForWord(QWebSpellChecker* self, struct seaqt_string word, struct seaqt_string context, struct seaqt_array /* of struct seaqt_string */  guesses);
bool QWebSpellChecker_isGrammarCheckingEnabled(QWebSpellChecker* self);
void QWebSpellChecker_toggleGrammarChecking(QWebSpellChecker* self);
void QWebSpellChecker_checkGrammarOfString(QWebSpellChecker* self, struct seaqt_string param1, struct seaqt_array /* of QWebSpellChecker__GrammarDetail* */  param2, int* badGrammarLocation, int* badGrammarLength);
struct seaqt_string QWebSpellChecker_tr2(const char* s, const char* c);
struct seaqt_string QWebSpellChecker_tr3(const char* s, const char* c, int n);
struct seaqt_string QWebSpellChecker_trUtf82(const char* s, const char* c);
struct seaqt_string QWebSpellChecker_trUtf83(const char* s, const char* c, int n);