seaqt/QtWebKit/gen_qwebkitplatformplugin.nim


proc fcQWebSelectData_itemType(self: pointer, param1: cint): cint {.importc: "QWebSelectData_itemType".}
proc fcQWebSelectData_itemText(self: pointer, index: cint): struct_miqt_string {.importc: "QWebSelectData_itemText".}
proc fcQWebSelectData_itemToolTip(self: pointer, index: cint): struct_miqt_string {.importc: "QWebSelectData_itemToolTip".}
proc fcQWebSelectData_itemIsEnabled(self: pointer, index: cint): bool {.importc: "QWebSelectData_itemIsEnabled".}
proc fcQWebSelectData_itemIsSelected(self: pointer, index: cint): bool {.importc: "QWebSelectData_itemIsSelected".}
proc fcQWebSelectData_itemCount(self: pointer, ): cint {.importc: "QWebSelectData_itemCount".}
proc fcQWebSelectData_multiple(self: pointer, ): bool {.importc: "QWebSelectData_multiple".}
proc fcQWebSelectData_backgroundColor(self: pointer, ): pointer {.importc: "QWebSelectData_backgroundColor".}
proc fcQWebSelectData_foregroundColor(self: pointer, ): pointer {.importc: "QWebSelectData_foregroundColor".}
proc fcQWebSelectData_itemBackgroundColor(self: pointer, index: cint): pointer {.importc: "QWebSelectData_itemBackgroundColor".}
proc fcQWebSelectData_itemForegroundColor(self: pointer, index: cint): pointer {.importc: "QWebSelectData_itemForegroundColor".}
proc fcQWebSelectData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWebSelectData_operatorAssign".}
proc fcQWebSelectData_delete(self: pointer) {.importc: "QWebSelectData_delete".}
proc fcQWebSelectMethod_metaObject(self: pointer, ): pointer {.importc: "QWebSelectMethod_metaObject".}
proc fcQWebSelectMethod_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebSelectMethod_metacast".}
proc fcQWebSelectMethod_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebSelectMethod_metacall".}
proc fcQWebSelectMethod_tr(s: cstring): struct_miqt_string {.importc: "QWebSelectMethod_tr".}
proc fcQWebSelectMethod_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebSelectMethod_trUtf8".}
proc fcQWebSelectMethod_show(self: pointer, param1: pointer): void {.importc: "QWebSelectMethod_show".}
proc fcQWebSelectMethod_hide(self: pointer, ): void {.importc: "QWebSelectMethod_hide".}
proc fcQWebSelectMethod_setGeometry(self: pointer, geometry: pointer): void {.importc: "QWebSelectMethod_setGeometry".}
proc fcQWebSelectMethod_setFont(self: pointer, font: pointer): void {.importc: "QWebSelectMethod_setFont".}
proc fcQWebSelectMethod_selectItem(self: pointer, index: cint, allowMultiplySelections: bool, shift: bool): void {.importc: "QWebSelectMethod_selectItem".}
proc fcQWebSelectMethod_connect_selectItem(self: pointer, slot: int) {.importc: "QWebSelectMethod_connect_selectItem".}
proc fcQWebSelectMethod_didHide(self: pointer, ): void {.importc: "QWebSelectMethod_didHide".}
proc fcQWebSelectMethod_connect_didHide(self: pointer, slot: int) {.importc: "QWebSelectMethod_connect_didHide".}
proc fcQWebSelectMethod_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebSelectMethod_tr2".}
proc fcQWebSelectMethod_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebSelectMethod_tr3".}
proc fcQWebSelectMethod_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebSelectMethod_trUtf82".}
proc fcQWebSelectMethod_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebSelectMethod_trUtf83".}
proc fcQWebSelectMethod_staticMetaObject(): pointer {.importc: "QWebSelectMethod_staticMetaObject".}
proc fcQWebSelectMethod_delete(self: pointer) {.importc: "QWebSelectMethod_delete".}
proc fcQWebNotificationData_title(self: pointer, ): struct_miqt_string {.importc: "QWebNotificationData_title".}
proc fcQWebNotificationData_message(self: pointer, ): struct_miqt_string {.importc: "QWebNotificationData_message".}
proc fcQWebNotificationData_iconUrl(self: pointer, ): pointer {.importc: "QWebNotificationData_iconUrl".}
proc fcQWebNotificationData_openerPageUrl(self: pointer, ): pointer {.importc: "QWebNotificationData_openerPageUrl".}
proc fcQWebNotificationData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWebNotificationData_operatorAssign".}
proc fcQWebNotificationData_delete(self: pointer) {.importc: "QWebNotificationData_delete".}
proc fcQWebNotificationPresenter_metaObject(self: pointer, ): pointer {.importc: "QWebNotificationPresenter_metaObject".}
proc fcQWebNotificationPresenter_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebNotificationPresenter_metacast".}
proc fcQWebNotificationPresenter_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebNotificationPresenter_metacall".}
proc fcQWebNotificationPresenter_tr(s: cstring): struct_miqt_string {.importc: "QWebNotificationPresenter_tr".}
proc fcQWebNotificationPresenter_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebNotificationPresenter_trUtf8".}
proc fcQWebNotificationPresenter_showNotification(self: pointer, param1: pointer): void {.importc: "QWebNotificationPresenter_showNotification".}
proc fcQWebNotificationPresenter_notificationClosed(self: pointer, ): void {.importc: "QWebNotificationPresenter_notificationClosed".}
proc fcQWebNotificationPresenter_connect_notificationClosed(self: pointer, slot: int) {.importc: "QWebNotificationPresenter_connect_notificationClosed".}
proc fcQWebNotificationPresenter_notificationClicked(self: pointer, ): void {.importc: "QWebNotificationPresenter_notificationClicked".}
proc fcQWebNotificationPresenter_connect_notificationClicked(self: pointer, slot: int) {.importc: "QWebNotificationPresenter_connect_notificationClicked".}
proc fcQWebNotificationPresenter_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebNotificationPresenter_tr2".}
proc fcQWebNotificationPresenter_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebNotificationPresenter_tr3".}
proc fcQWebNotificationPresenter_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebNotificationPresenter_trUtf82".}
proc fcQWebNotificationPresenter_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebNotificationPresenter_trUtf83".}
proc fcQWebNotificationPresenter_staticMetaObject(): pointer {.importc: "QWebNotificationPresenter_staticMetaObject".}
proc fcQWebNotificationPresenter_delete(self: pointer) {.importc: "QWebNotificationPresenter_delete".}
proc fcQWebHapticFeedbackPlayer_metaObject(self: pointer, ): pointer {.importc: "QWebHapticFeedbackPlayer_metaObject".}
proc fcQWebHapticFeedbackPlayer_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebHapticFeedbackPlayer_metacast".}
proc fcQWebHapticFeedbackPlayer_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebHapticFeedbackPlayer_metacall".}
proc fcQWebHapticFeedbackPlayer_tr(s: cstring): struct_miqt_string {.importc: "QWebHapticFeedbackPlayer_tr".}
proc fcQWebHapticFeedbackPlayer_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebHapticFeedbackPlayer_trUtf8".}
proc fcQWebHapticFeedbackPlayer_playHapticFeedback(self: pointer, param1: cint, hapticType: struct_miqt_string, param3: cint): void {.importc: "QWebHapticFeedbackPlayer_playHapticFeedback".}
proc fcQWebHapticFeedbackPlayer_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebHapticFeedbackPlayer_tr2".}
proc fcQWebHapticFeedbackPlayer_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebHapticFeedbackPlayer_tr3".}
proc fcQWebHapticFeedbackPlayer_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebHapticFeedbackPlayer_trUtf82".}
proc fcQWebHapticFeedbackPlayer_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebHapticFeedbackPlayer_trUtf83".}
proc fcQWebHapticFeedbackPlayer_staticMetaObject(): pointer {.importc: "QWebHapticFeedbackPlayer_staticMetaObject".}
proc fcQWebHapticFeedbackPlayer_delete(self: pointer) {.importc: "QWebHapticFeedbackPlayer_delete".}
proc fcQWebTouchModifier_metaObject(self: pointer, ): pointer {.importc: "QWebTouchModifier_metaObject".}
proc fcQWebTouchModifier_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebTouchModifier_metacast".}
proc fcQWebTouchModifier_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebTouchModifier_metacall".}
proc fcQWebTouchModifier_tr(s: cstring): struct_miqt_string {.importc: "QWebTouchModifier_tr".}
proc fcQWebTouchModifier_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebTouchModifier_trUtf8".}
proc fcQWebTouchModifier_hitTestPaddingForTouch(self: pointer, param1: cint): cuint {.importc: "QWebTouchModifier_hitTestPaddingForTouch".}
proc fcQWebTouchModifier_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebTouchModifier_tr2".}
proc fcQWebTouchModifier_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebTouchModifier_tr3".}
proc fcQWebTouchModifier_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebTouchModifier_trUtf82".}
proc fcQWebTouchModifier_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebTouchModifier_trUtf83".}
proc fcQWebTouchModifier_staticMetaObject(): pointer {.importc: "QWebTouchModifier_staticMetaObject".}
proc fcQWebTouchModifier_delete(self: pointer) {.importc: "QWebTouchModifier_delete".}
proc fcQWebSpellChecker_metaObject(self: pointer, ): pointer {.importc: "QWebSpellChecker_metaObject".}
proc fcQWebSpellChecker_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebSpellChecker_metacast".}
proc fcQWebSpellChecker_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebSpellChecker_metacall".}
proc fcQWebSpellChecker_tr(s: cstring): struct_miqt_string {.importc: "QWebSpellChecker_tr".}
proc fcQWebSpellChecker_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebSpellChecker_trUtf8".}
proc fcQWebSpellChecker_isContinousSpellCheckingEnabled(self: pointer, ): bool {.importc: "QWebSpellChecker_isContinousSpellCheckingEnabled".}
proc fcQWebSpellChecker_toggleContinousSpellChecking(self: pointer, ): void {.importc: "QWebSpellChecker_toggleContinousSpellChecking".}
proc fcQWebSpellChecker_learnWord(self: pointer, word: struct_miqt_string): void {.importc: "QWebSpellChecker_learnWord".}
proc fcQWebSpellChecker_ignoreWordInSpellDocument(self: pointer, word: struct_miqt_string): void {.importc: "QWebSpellChecker_ignoreWordInSpellDocument".}
proc fcQWebSpellChecker_checkSpellingOfString(self: pointer, word: struct_miqt_string, misspellingLocation: ptr cint, misspellingLength: ptr cint): void {.importc: "QWebSpellChecker_checkSpellingOfString".}
proc fcQWebSpellChecker_autoCorrectSuggestionForMisspelledWord(self: pointer, word: struct_miqt_string): struct_miqt_string {.importc: "QWebSpellChecker_autoCorrectSuggestionForMisspelledWord".}
proc fcQWebSpellChecker_guessesForWord(self: pointer, word: struct_miqt_string, context: struct_miqt_string, guesses: struct_miqt_array): void {.importc: "QWebSpellChecker_guessesForWord".}
proc fcQWebSpellChecker_isGrammarCheckingEnabled(self: pointer, ): bool {.importc: "QWebSpellChecker_isGrammarCheckingEnabled".}
proc fcQWebSpellChecker_toggleGrammarChecking(self: pointer, ): void {.importc: "QWebSpellChecker_toggleGrammarChecking".}
proc fcQWebSpellChecker_checkGrammarOfString(self: pointer, param1: struct_miqt_string, param2: struct_miqt_array, badGrammarLocation: ptr cint, badGrammarLength: ptr cint): void {.importc: "QWebSpellChecker_checkGrammarOfString".}
proc fcQWebSpellChecker_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebSpellChecker_tr2".}
proc fcQWebSpellChecker_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebSpellChecker_tr3".}
proc fcQWebSpellChecker_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebSpellChecker_trUtf82".}
proc fcQWebSpellChecker_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebSpellChecker_trUtf83".}
